Copy and display

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,3 +64,29 @@ jobs:
         run: |
           set -x
           ls -alhR /opt/hostedtoolcache/jdk-17-hotspot/1.0.0/x64
+
+      - name: Copy jdk8
+        shell: bash
+        run: |
+          set -x
+          mkdir jdk8
+          cp -r /opt/hostedtoolcache/jdk-8-hotspot/1.0.0/x64/{bin,include,jre,lib} jdk8
+
+      - name: Copy jdk17
+        shell: bash
+        run: |
+          set -x
+          mkdir jdk17
+          cp -r /opt/hostedtoolcache/jdk-17-hotspot/1.0.0/x64/{bin,include,conf,lib} jdk17
+
+      - name: Echo copied jdk8
+        shell: bash
+        run: |
+          set -x
+          ls -alhR jdk8
+
+      - name: Echo copied jdk17
+        shell: bash
+        run: |
+          set -x
+          ls -alhR jdk17
