--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,3 +90,15 @@ jobs:
         run: |
           set -x
           ls -alhR jdk17
+
+      - name: Test if
+        if: matrix.app_image == True
+        run: |
+          set -x
+          echo "It's True!"
+
+      - name: Test not if
+        if: matrix.app_image != True
+        run: |
+          set -x
+          echo "It's Not true!"
