--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,10 +57,12 @@ jobs:
         shell: bash
         run: |
           set +x
-          ls -alhR /usr/lib/jvm
+          ls -alhR /usr/lib/jvm/java-8-openjdk-amd64
+          ls -alhR /usr/lib/jvm/java-17-openjdk-amd64
 
       - name: Show alternatives
         shell: bash
         run: |
           set -x
           update-java-alternatives --list
+          sudo update-java-alternatives --set java-1.17.0-openjdk-amd64
