--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,30 +11,11 @@ jobs:
         include:
 
           - os: ubuntu-20.04
-            qt_version: 5.12.8
-            qt_host: linux
-
-          - os: ubuntu-20.04
-            qt_version: 5.15.2
-            qt_host: linux
-            app_image: true
-
           - os: windows-2022
-            qt_version: 5.15.2
-            qt_host: windows
-            qt_arch: win64_mingw81
 
           - os: macos-11
-            qt_version: 5.12.12
-            qt_host: mac
-            macosx_deployment_target: 10.12
 
     runs-on: ${{ matrix.os }}
-
-    env:
-      MACOSX_DEPLOYMENT_TARGET: ${{ matrix.macosx_deployment_target }}
-      INSTALL_DIR: "install"
-      BUILD_DIR: "build"
 
     steps:
 
@@ -64,5 +45,5 @@ jobs:
         shell: bash
         run: |
           set -x
-          update-java-alternatives --list
+          # update-java-alternatives --list
           sudo update-java-alternatives --set java-1.17.0-openjdk-amd64
