--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,12 +8,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        include:
-
-          - os: ubuntu-20.04
+          # - os: ubuntu-20.04
           - os: windows-2022
-
-          - os: macos-11
+          # - os: macos-11
 
     runs-on: ${{ matrix.os }}
 
@@ -24,26 +21,30 @@ jobs:
         with:
           submodules: 'true'
 
-      - name: Install System OpenJDK 8
-        run: |
-          sudo apt-get install -y openjdk-8-jdk
-          sudo apt-get install -y openjdk-8-jre
+      # - name: Install System OpenJDK 8
+      #   run: |
+      #     sudo apt-get install -y openjdk-8-jdk
+      #     sudo apt-get install -y openjdk-8-jre
 
-      - name: Install System OpenJDK 17
-        run: |
-          sudo apt-get install -y openjdk-17-jdk
-          sudo apt-get install -y openjdk-17-jre
+      # - name: Install System OpenJDK 17
+      #   run: |
+      #     sudo apt-get install -y openjdk-17-jdk
+      #     sudo apt-get install -y openjdk-17-jre
 
-      - name: Show jvm directories
-        shell: bash
-        run: |
-          set +x
-          ls -alhR /usr/lib/jvm/java-8-openjdk-amd64
-          ls -alhR /usr/lib/jvm/java-17-openjdk-amd64
+      # - name: Show jvm directories
+      #   shell: bash
+      #   run: |
+      #     set +x
+      #     ls -alhR /usr/lib/jvm/java-8-openjdk-amd64
+      #     ls -alhR /usr/lib/jvm/java-17-openjdk-amd64
 
-      - name: Show alternatives
-        shell: bash
+      # - name: Show alternatives
+      #   shell: bash
+      #   run: |
+      #     set -x
+      #     # update-java-alternatives --list
+      #     sudo update-java-alternatives --set java-1.17.0-openjdk-amd64
+
+      - name: Find
         run: |
-          set -x
-          # update-java-alternatives --list
-          sudo update-java-alternatives --set java-1.17.0-openjdk-amd64
+          where /r D:\ *mingw32*
