--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        include:
           - os: ubuntu-20.04
           - os: windows-2022
           - os: macos-11
