--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,6 @@ jobs:
 
       - name: Find
         if: runner.os == 'Windows'
-        run: Get-Childitem –Path D:\ -Include *mingw* -File -Recurse -ErrorAction SilentlyContinue
+        run: |
+          Get-Childitem –Path C:\ -Include *mingw* -File -Recurse -ErrorAction SilentlyContinue
+          Get-Childitem –Path D:\ -Include *mingw* -File -Recurse -ErrorAction SilentlyContinue
