--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Install Strawberry
         if: runner.os == 'Windows'
         run: |
-          choco install strawberryperl -y
+          choco install strawberryperl -y --force
 
       - name: Find
         if: runner.os == 'Windows'
