--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,18 +51,37 @@ jobs:
       #   with:
       #     platform: x86
 
-      - name: Install Strawberry
-        if: runner.os == 'Windows'
-        run: |
-          choco install strawberryperl -y --force --x86
+      # - name: Install Strawberry
+      #   if: runner.os == 'Windows'
+      #   run: |
+      #     choco install strawberryperl -y --force --x86
 
-      - name: Find
-        if: runner.os == 'Windows'
-        run: |
-          Get-Childitem –Path C:\Strawberry -Include *i686* -File -Recurse -ErrorAction SilentlyContinue
+      # - name: Find
+      #   if: runner.os == 'Windows'
+      #   run: |
+      #     Get-Childitem –Path C:\Strawberry -Include *i686* -File -Recurse -ErrorAction SilentlyContinue
 
       # - name: Find
       #   if: runner.os == 'Windows'
       #   shell: bash
       #   run: |
       #     ls -alhR C:/Strawberry
+
+      - name: Download OpenSSL libs on Windows
+        if: runner.os == 'Windows'
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install aqtinstall==2.0.5
+          python -m aqt install-tool -O "${{ github.workspace }}\Qt\" windows desktop tools_openssl_x86
+
+      - name: Do something else
+        shell: bash
+        run: |
+          echo "Doing something"
+
+      - name: Install OpenSSL libs on Windows
+        if: runner.os == 'Windows'
+        run: |
+          mkdir install
+          copy "${{ github.workspace }}\Qt\Tools\OpenSSL\Win_x86\bin\libssl-1_1.dll" "${{ github.workspace }}\install\"
+          copy "${{ github.workspace }}\Qt\Tools\OpenSSL\Win_x86\bin\libcrypto-1_1.dll" "${{ github.workspace }}\install\"
